@@ -2,12 +2,13 @@
 <window>
 	<defaultcontrol always="true">55</defaultcontrol>
 	<backgroundcolor>background</backgroundcolor>
-	<views>55</views>
+	<views>52,55</views>
 	<menucontrol>9000</menucontrol>
 	<controls>`
 		<include>DefaultBackground</include>
 		<control type="group">
 			<animation effect="fade" start="100" end="0" time="200" tween="sine" condition="$EXP[infodialog_active]">Conditional</animation>
+			<include>View_52_IconWall</include>
 			<include>View_55_WideList</include>
 			<include>CommonScrollbars</include>
 			<control type="group">
