@@ -1,4 +1,5 @@
 [B]2.2.6[/B]
+• Change extension file '.png' to '.jpg' for games artworks
 • Minor fixes
 
 [B]2.2.5[/B]
